--- a/src/main/webapp/components/HMenu.less
+++ b/src/main/webapp/components/HMenu.less
@@ -177,7 +177,7 @@ ul.HMenu
 		}
 	}
 
-	@media only screen and (min-width: 1460ox)
+	@media only screen and (min-width: 1460px)
 		{
 
 		> li:first-child:nth-last-child(9),
